[package]
name = "ad983x"
version = "0.3.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/ad983x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the AD9833, AD9834, AD9837 and AD9838 low-power programmable waveform generators / direct digital synthesizers."
readme = "README.md"
keywords = ["waveform", "generator", "dds", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/ad983x-rs"
documentation = "https://docs.rs/ad983x"
edition = "2021"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
linux-embedded-hal = "0.4.0"
embedded-hal-mock = { version = "0.10.0", default-features=false, features=["eh1"] }
embedded-hal-bus = "0.1"
dummy-pin = "1.0.0"

[profile.release]
lto = true
